# westfactor

./: .env  Cargo.toml  configuration.yaml
configuration/: base.yaml
migrations/: 20240625020604_blog.sql  21_blog_alter_id.sql  22_blog.sql  23_insert_super_users.sql
scripts/: init_db.sh
src/: configuration.rs  errors.rs  lib.rs  startup.rs  telemetry.rs
src/blog/: blogApp.rs  blog_app.rs  mod.rs
src/blog/routes/: mod.rs
src/dbaccess/: users.rs
src/handlers/: general.rs  mod.rs  users.rs
src/models/: users.rs
src/routers/: routes.rs
src/types/: users.rs
tests/: blog.rs  helper.rs
