[package]
name = "westfactor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.8.0"
config = "0.14.0"
dotenv = "0.15.0"
serde = {version = "1.0.203",features = ["derive"]}
sqlx = {version = "0.7.4", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}

[lib]
path = "src/lib.rs"


[[bin]]
name = "blog"
