[package]
name = "westfactor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.8.0"
config = "0.14.0"
dotenv = "0.15.0"
serde = {version = "1.0.203",features = ["derive"]}
sqlx = {version = "0.7.4", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"


[dev-dependencies]
once_cell = "1.7.2"

[lib]
path = "src/lib.rs"

[[bin]]
name="blog"
